--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,10 +72,10 @@
                     <div class="abtn-secondary2">
                       <div class="httpslink-parent">
                         <div class="httpslink"> <a href="<%= element.short_url %>" target="_blank">
-                            http://localhost:5000/<%=element.short_url%></a>
+                          https://short-linkss.vercel.app/<%=element.short_url%></a>
                         </div>
 
-                        <div> <button onclick="copyShortUrl('http://localhost:5000/<%= element.short_url %>')" class="copy copy-wrapper"><img
+                        <div> <button onclick="copyShortUrl('https://short-linkss.vercel.app/<%= element.short_url %>')" class="copy copy-wrapper"><img
                               src="./public/copy.png" /></button>
 
                         </div>
