--- a/views/index.css
+++ b/views/index.css
@@ -67,8 +67,8 @@
 }
 .frame {
   position: relative;
-  width: 2270.06px;
-  height: 2270.06px;
+  width: 100vw;
+  height: 200vh;
   overflow: hidden;
   flex-shrink: 0;
   z-index: 0;
@@ -438,16 +438,16 @@ a {
   flex-direction: column;
 }
 .frame6 {
-  width: 1421px;
-  height: 1099px;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .frame5 {
-  width: 1448px;
-  height: 1750px;
+  width: 100vw;
+  height: 100vh;
   margin-top: -1066px;
 }
 .frame2,
@@ -461,8 +461,8 @@ a {
   max-height: 100vh;
 }
 .frame3 {
-  width: 1427.5px;
-  height: 1750.06px;
+  width: 100vw;
+  height: 100vh;
   flex-shrink: 0;
   flex-direction: column;
 }
@@ -475,8 +475,8 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  width: 1728px;
-  height: 1120px;
+  width: 100vw;
+  height: 100vh;
   flex-shrink: 0;
   z-index: 1;
 }
@@ -484,7 +484,7 @@ a {
   position: relative;
   background-color: #0b101b;
   width: 100%;
-  height: 1117px;
+  height: 100%;
   gap: var(--gap-3xs);
   text-align: right;
   font-size: var(--font-size-41xl);
