--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./index.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;700;800&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Font Awesome 6 Pro:wght@300;400&display=swap" />
+  <link rel="icon" href="icon.png" />
+
 </head>
 
 <body>
